--- a/второй_год_обучения/recomendation_system_model.ipynb
+++ b/второй_год_обучения/recomendation_system_model.ipynb
@@ -18,9 +18,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Your CPU supports instructions that this binary was not compiled to use: SSE3 SSE4.1 SSE4.2 AVX\n",
+            "For maximum performance, you can install NMSLIB from sources \n",
+            "pip install --no-binary :all: nmslib\n"
+          ]
+        }
+      ],
       "source": [
         "import warnings\n",
         "warnings.filterwarnings(\"ignore\")\n",
